; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_machine_routines.c_machine_timeout_suspended.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_machine_routines.c_machine_timeout_suspended.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pmap_tlb_flush_timeout = common dso_local global i64 0, align 8
@spinlock_timed_out = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @machine_timeout_suspended() #0 {
  %1 = load i64, i64* @pmap_tlb_flush_timeout, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %15, label %3

3:                                                ; preds = %0
  %4 = load i64, i64* @spinlock_timed_out, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %15, label %6

6:                                                ; preds = %3
  %7 = call i64 (...) @panic_active()
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %15, label %9

9:                                                ; preds = %6
  %10 = call i64 (...) @mp_recent_debugger_activity()
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %9
  %13 = call i64 (...) @ml_recent_wake()
  %14 = icmp ne i64 %13, 0
  br label %15

15:                                               ; preds = %12, %9, %6, %3, %0
  %16 = phi i1 [ true, %9 ], [ true, %6 ], [ true, %3 ], [ true, %0 ], [ %14, %12 ]
  %17 = zext i1 %16 to i32
  ret i32 %17
}

declare dso_local i64 @panic_active(...) #1

declare dso_local i64 @mp_recent_debugger_activity(...) #1

declare dso_local i64 @ml_recent_wake(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
